# txture

./: .clang-format  .editorconfig  .gitignore  flags.h  format.h  gen.c  gen.h  gen_list.h  main.c  meson.build  out.ppm  ppm.c  ppm.h  process.c  process.h  utils.c  utils.h
expr/: expr_test.c  expr_test.h  lexer.c  lexer.h  meson.build  operators_list.h  parser.c  parser.h  token_list.h
